# diagram-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: release.yml
src/: claude.rs  config.rs  curl.rs  main.rs  mermaid.rs  prompt.rs  sanitize.rs
