[package]
name = "diagram-cli"
version = "0.1.0"
edition = "2024"
description = "AI 連携でシステム図を生成する CLI"
repository = "https://github.com/tadasi/diagram-cli"
license = "MIT"

[[bin]]
name = "dg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
